--- a/6.1_files,_folders_&_os/files,_folders_&_os_(need).ipynb
+++ b/6.1_files,_folders_&_os/files,_folders_&_os_(need).ipynb
@@ -253,6 +253,79 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "2464217a-f793-4c27-884c-3fbd7ca473c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\\\'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.sep"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "6de40ce3-44a7-46c5-896e-79319c6db8cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('hahaha', '.txt')"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.splitext('hahaha.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "647b9a76-9661-47d3-9542-f760e4b59b21",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'txt'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filename = 'hahaha.txt'\n",
+    "\n",
+    "filename.split('.')[-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe3bb2a7-d44f-4e90-8a46-cd8d545a9f40",
+   "metadata": {},
+   "source": [
+    "ensure we do not hardcode anything, else if we open it up, it might work for windows but not on mac/linux"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "d50af85f",
@@ -268,6 +341,72 @@
    "metadata": {},
    "source": [
     "## 2.1 Reading data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d245725-5ad2-4254-854b-87cd96b2248b",
+   "metadata": {},
+   "source": [
+    "to read, we need to open and close the file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3bb5e766-5572-4b8f-bec1-bba485d26d39",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fff\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('hihihi.txt', 'r') as file: \n",
+    "    filetext = file.read()\n",
+    "\n",
+    "print(filetext)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "501ef013-43c1-4f04-8742-9dfc4e6b6a9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'lol.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mlol.txt\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m file: \n\u001b[0;32m      2\u001b[0m     filetext \u001b[38;5;241m=\u001b[39m file\u001b[38;5;241m.\u001b[39mread()\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(filetext)\n",
+      "File \u001b[1;32m~\\miniconda3\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:324\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    317\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[0;32m    318\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    319\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    320\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    321\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    322\u001b[0m     )\n\u001b[1;32m--> 324\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'lol.txt'"
+     ]
+    }
+   ],
+   "source": [
+    "with open('lol.txt') as file: \n",
+    "    filetext = file.read()\n",
+    "\n",
+    "print(filetext)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abb16615-c9ea-43bd-8ca3-06828a987ea5",
+   "metadata": {},
+   "source": [
+    "This does not work because the lol.txt file is not saved in the learning portfolio file in my laptop \n",
+    "\n",
+    "only the hihihi.txt is saved inside, so thats why it can open "
    ]
   },
   {
