--- a/6.1_files,_folders_&_os/files,_folders_&_os_(need).ipynb
+++ b/6.1_files,_folders_&_os/files,_folders_&_os_(need).ipynb
@@ -374,6 +374,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ac9985a2-f689-49e3-b661-a1ef0e9e048f",
+   "metadata": {},
+   "source": [
+    "r is for reading and w is for writing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "501ef013-43c1-4f04-8742-9dfc4e6b6a9d",
@@ -429,13 +437,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0b75ebdf",
    "metadata": {},
    "outputs": [],
    "source": [
+    "with open('hihihi.txt', 'w') as file: \n",
+    "    file.write('gone')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f6212b6-6d84-44cb-926f-26698807f836",
+   "metadata": {},
+   "source": [
+    "when we reopen the hihihi.txt file from file explorer, it shld be updated with the word gone only, and not fff\n",
     "\n",
-    "# Your code here\n"
+    "(it worked for me, i tried it)"
    ]
   },
   {
@@ -449,13 +467,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4d1136c2",
    "metadata": {},
    "outputs": [],
    "source": [
+    "with open('hihihi.txt', 'a') as file: \n",
+    "    file.write('gone')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5eeceb5a-cf7e-478e-b5ba-90451beeca11",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gonegone\n"
+     ]
+    }
+   ],
+   "source": [
+    "!more hihihi.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17dfa73a-162f-4d8f-9f39-cac66cbf4f26",
+   "metadata": {},
+   "source": [
+    "so i only ran the append with gone one time, that's why now when i do the !more it reads 'gonegone'. \n",
     "\n",
-    "# Your code here\n"
+    "this 'gonegone' will also appear in the hihihi.txt file when we open it from file explorer. \n",
+    "\n",
+    "!more shows us how many times we ran the append. "
    ]
   },
   {
