--- a/6.1_files,_folders_&_os/files,_folders_&_os_(need).ipynb
+++ b/6.1_files,_folders_&_os/files,_folders_&_os_(need).ipynb
@@ -499,7 +499,7 @@
    "id": "17dfa73a-162f-4d8f-9f39-cac66cbf4f26",
    "metadata": {},
    "source": [
-    "so i only ran the append with gone one time, that's why now when i do the !more it reads 'gonegone'. \n",
+    "so i only ran the **append** with gone one time, that's why now when i do the !more it reads 'gonegone'. \n",
     "\n",
     "this 'gonegone' will also appear in the hihihi.txt file when we open it from file explorer. \n",
     "\n",
