--- a/6.1_files,_folders_&_os/files,_folders_&_os_(need).ipynb
+++ b/6.1_files,_folders_&_os/files,_folders_&_os_(need).ipynb
@@ -503,7 +503,39 @@
     "\n",
     "this 'gonegone' will also appear in the hihihi.txt file when we open it from file explorer. \n",
     "\n",
-    "!more shows us how many times we ran the append. "
+    "!more shows us how many times we ran the append. \n",
+    "\n",
+    "we can also add \\n to the writing as well"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3dcadbda-9b95-4443-95b9-0ae8fffdff0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('hihihi.txt', 'a') as file: \n",
+    "    file.write('\\ngone')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1ae4a244-b4d2-4d93-962d-5544fede631e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gonegone\n",
+      "gone\n"
+     ]
+    }
+   ],
+   "source": [
+    "!more hihihi.txt"
    ]
   },
   {
@@ -513,6 +545,28 @@
    "metadata": {},
    "source": [
     "# 3 Some useful packages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a1b718ce-c769-43bb-81a2-d64419c1e96f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os, glob, shutil"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca7e9d5f-b3c7-47c3-a760-0a09994e7c19",
+   "metadata": {},
+   "source": [
+    "os --> To ‘talk’ to the OS to create, modify, delete folders and write OS-agnostic code.\n",
+    "\n",
+    "glob --> to search for files\n",
+    "\n",
+    "shutil --> to copy files"
    ]
   },
   {
@@ -540,6 +594,24 @@
    "metadata": {},
    "source": [
     "## 5.1 Creating folders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a9be271b-ca3e-4488-8ed6-c79d3ebbd226",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.mkdir('Wooooo')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d7ab23b-c3da-424d-9ea6-585b169a61f3",
+   "metadata": {},
+   "source": [
+    "go to file explorer, a new file called 'Wooooo' shld be there"
    ]
   },
   {
